--- a/src/components/Content/MyPosts/Post/Posts.module.css
+++ b/src/components/Content/MyPosts/Post/Posts.module.css
@@ -5,4 +5,9 @@
 .items img {
     width: 100px;
     border-radius: 20px;
+    padding-bottom: 5px;
+}
+.button{
+    padding-bottom: 15px;
+    padding-top: 5px;
 }
